# trocr_handwritten

./: .env.dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  apply_transformation.py  config.py  goals.yaml  launch_Turpan.md  pipeline.sh  pyproject.toml  requirements.txt  setup.py  test_model_logging.py
.github/workflows/: main.yml
.venv_layout/compiler_compat/: ld
.venv_layout/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-51_gnu.json  bzip2-1.0.8-h998d150_6.json  ca-certificates-2024.9.24-hd43f75c_0.json  history  ld_impl_linux-aarch64-2.40-h48e3ba3_0.json  libffi-3.4.4-h419075a_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libstdcxx-ng-11.2.0-h1234567_1.json  libuuid-1.41.5-h998d150_0.json  ncurses-6.4-h419075a_0.json  openssl-3.0.15-h998d150_0.json  pip-24.2-py310hd43f75c_0.json  python-3.10.15-h4bb2201_1.json  readline-8.2-h998d150_0.json  setuptools-75.1.0-py310hd43f75c_0.json  sqlite-3.45.3-h998d150_0.json  tk-8.6.14-h987d8db_0.json  tzdata-2024b-h04d1e81_0.json  wheel-0.44.0-py310hd43f75c_0.json  xz-5.4.6-h998d150_1.json  zlib-1.2.13-h998d150_1.json
.venv_layout/lib/: libasan.so.6.0.0  libatomic.so.1.2.0  libbz2.so.1.0.8  libffi.so.8.1.2  libformw.so.6.4  libgcc_s.so.1  libgomp.so.1.0.0  libhistory.so.8.2  libitm.so.1.0.0  liblsan.so.0.0.0  liblzma.so.5.4.6  libmenuw.so.6.4  libncursesw.so.6.4  libpanelw.so.6.4  libreadline.so.8.2  libsqlite3.so.0.8.6  libssl.so.3  libstdc++.so.6.0.29  libtinfow.so.6.4  libtsan.so.0.0.0  libubsan.so.1.0.0  libuuid.so.1.3.0  libz.so.1.2.13  tclConfig.sh  (+1 more)
config/: ner.prompt  ner_birth.prompt  ner_death.prompt  ner_marriage.prompt  ner_unknown.prompt  ocr.prompt
logs/: 2026-03-23_session.md  2026-03-24_session.md  2026-04-03_session.md  2026-04-04_session.md  2026-04-06_session.md  2026-04-07_session.md  2026-04-09_session.md  2026-04-10_session.md  2026-04-13_session.md  abymes_1842.csv  api_costs.jsonl  api_costs_export.csv  cost_discrepancy_report.txt  model_comparison_2026-03-24.html  model_comparison_2026-03-24.md  ner_cost_estimate_2026-04-07.md  ner_extraction_examples.html  ner_extraction_examples.md  ner_model_comparison_2026-04-07.html  ner_model_comparison_2026-04-07.md  test_lowthinking_2026-03-31.txt
models/: cbad_2019.txt
notebook/: LAYOUT - training yolo.ipynb  NER - 1 - textToActes&Marges.ipynb  OCR - Inference Pipeline_AG.ipynb  OCR - Inference Pipeline_ApplyOCR.ipynb  OCR - Inference Pipeline_Parsing.ipynb  OCR - launch pipeline_24102024.ipynb  output.txt  requirements.txt  requirements_tocheck.txt
prepare_training_OCR/: image_decisions.json  postprocess_lines.py  push_validated_dataset.py  review_source_images.py  validate_cropped_source_images.py
scripts/: Instructions  cost_report.py  extract_pages.py  fix_reading_order.py  launch_layout.py  reorganize_lowthinking.py  retry_all_failed.ps1  retry_failed.ps1  run_20_untranscribed.py  run_abymes_1842.ps1  run_abymes_1842.sh  run_abymes_all copy.ps1  run_abymes_all.ps1  run_all.ps1  test_lowthinking.py  update_failed.ps1
test_lowthinking/: comparison.html  comparison.md  comparison_template.csv
tests/: test_annotation.py  test_cleaning.py  test_dataset.py  test_llm.py  test_logging_config.py  test_parse.py
trocr_handwritten/: README.md  image_process.py
trocr_handwritten/segmentation/kraken_env/: pyproject.toml  setup.py
trocr_handwritten/segmentation/kraken_env/line_segmenter/: __init__.py  image_processor.py  line_segmenter.py  run_segmentation.py  settings.py
trocr_handwritten/segmentation/kraken_env/line_segmenter/.ipynb_checkpoints/: SEGMENTATION - Inference Pipeline-checkpoint.ipynb
(+381 files in other folders)
