[tool.poetry]
name = "trocr-handwritten"
version = "0.1.0"
description = "A case study from [Marie Beigelman](https://mariebeigelman.github.io/)'s thesis using 19th Century French Archives"
authors = ["mbeigelman, agombert"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
transformers = "^4.35.2"
torch-same-pad = {git = "https://github.com/CyberZHG/torch-same-pad.git"}
albumentations = "^1.3.1"
torchvision = "^0.16.1"
shapely = "^2.0.2"
opencv-python = "^4.8.1.78"
matplotlib = "3.6"
ipykernel = "^6.27.1"
datasets = "^2.15.0"
pynvml = "^11.5.0"
accelerate = "^0.25.0"
jiwer = "^3.0.3"
evaluate = "^0.4.1"
jinja2 = "^3.1.2"
openai = "^1.3.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
