[tool.poetry]
name = "trocr-handwritten"
version = "0.1.0"
description = "A case study from [Marie Beigelman](https://mariebeigelman.github.io/)'s thesis using 19th Century French Archives"
authors = ["mbeigelman, agombert"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.0"
torch = "^2.2.0"
transformers = "^4.38.1"
albumentations = "^1.4.0"
torchvision = "^0.17.0"
shapely = "^2.0.3"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
ipykernel = "^6.29.2"
datasets = "^2.17.1"
pynvml = "^11.5.0"
accelerate = "^0.27.2"
jiwer = "^3.0.3"
evaluate = "^0.4.1"
openai = "^1.12.0"
scikit-learn = "^1.5.0"
jinja2 = "^3.1.5"
numpy = "^2.0.0"
doclayout-yolo = "^0.0.3"
boto3 = "^1.36.22"
click = "^8.1.7"
tabulate = "^0.9.0"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.2.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
s3-manage = "trocr_handwritten.utils.s3_cli:cli"
