[tool.poetry]
name = "kraken-line-segmenter"
version = "0.1.0"
description = "Line segmentation using Kraken"
authors = ["mbeigelman, agombert"]
packages = [{include = "line_segmenter"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
kraken = "^5.3.0"
numpy = ">=2.0.0,<2.1.0"
pillow = "^10.0.0"
tqdm = "^4.66.0"
matplotlib = "^3.8.3"
ipykernel = "^6.29.2"
notebook = "^7.0.0"
ipywidgets = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.2.2"
black = "^24.3.0"
